--- a/css/style.css
+++ b/css/style.css
@@ -1279,6 +1279,10 @@ img {
     font-size: 1rem;
 }
 
+.cart-summary .btn-primary.btn-full {
+    margin-bottom: 1rem;
+}
+
 .empty-cart {
     text-align: center;
     padding: 5rem 0;
@@ -1510,6 +1514,14 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
+}
+
+.story-image .image-placeholder img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 
 .story-image .image-placeholder i {
@@ -1620,6 +1632,14 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
+}
+
+.member-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 
 .member-image i {
